# balling-nao

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
launch/: nao.launch  nao.launch~
scripts/: hand_service.py  hand_service.py~  joint_service.py  joint_service.py~  position_service.py  rotation_service.py
src/: main.cc
src/cc/core/: brain.cc  brain.h  controller.cc  controller.h
src/cc/core/cognition/: path_planning.cc  path_planning.h  search.cc  search.h
src/cc/errors/: balling_nao_error.cc  balling_nao_error.h  cmd_not_understood_error.cc  cmd_not_understood_error.h  not_implemented_error.cc  not_implemented_error.h
src/cc/modules/: controller.cc  controller.h  motion.cc  motion.h  motion_library.h  speech.cc  speech.h  tactile.cc  tactile.h  vision.cc  vision.h
src/cc/sensors_actors/: motion.cc  motion.h  motion_library.cc  motion_library.h  speech.cc  speech.h  tactile.cc  tactile.h  vision.cc  vision.h
src/cc/states/: avoid_defender.cc  avoid_defender.h  avoid_defender_routine.h  avoid_defener_routine.cc  detect_hoop.cc  detect_hoop.h  done.cc  done.h  done.h~  execute_dunk_motion.cc  execute_dunk_motion.h  execute_throw_motion.cc  execute_throw_motion.h  mode_into_throw_dist.h  move_into_dunk_pos.cc  move_into_dunk_pos.h  move_into_throw_dist.cc  move_into_throw_dist.h  request_ball.cc  request_ball.h  request_task.cc  request_task.h  search_defender.cc  search_defender.h  search_potential_defender.h  state.cc  state.h  take_ball.cc  take_ball.h
src/python/: move_service.py
srv/: GetMarkerRotation.srv  GetPosition.srv  GetTransform.srv  GoToPosture.srv  HandControl.srv  MoveJoints.srv  MoveJoints.srv~  MoveToPosition.srv  Movement.srv~
test/: test_speech_integration.cc  test_state_request_ball.cc
